--- a/java-basic/app/build.gradle
+++ b/java-basic/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 // 소스 파일이 어떤 자바 버전으로 되어 있는지 Gradle에게 알려준다.
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
@@ -75,9 +75,9 @@ eclipse {
     project {
         name = "java-basic"
     }
-    jdt {
-      sourceCompatibility = 21
-      targetCompatibility = 21
-      javaRuntimeName = "JavaSE-21"
+    jdt { // eclipse 안의 자바개발툴
+      sourceCompatibility = 17
+      targetCompatibility = 17
+      javaRuntimeName = "JavaSE-17"
     }
 }
