--- a/myapp/app/build.gradle
+++ b/myapp/app/build.gradle
@@ -8,7 +8,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
-    id 'eclipse' 
+    id 'eclipse'
 }
 
 repositories {
@@ -47,7 +47,7 @@ tasks.named('test') {
 tasks.withType(JavaCompile).configureEach {
     // 프로젝트의 소스 파일 인코딩을 gradle에게 알려준다.
     // $javac -encoding UTF-8 ..
-    options.encoding = 'UTF-8' 
+    options.encoding = 'UTF-8'
 }
 
 // eclipse 프로젝트 이름을 설정하기
@@ -56,8 +56,14 @@ eclipse {
         name = "myapp"
     }
     jdt { // eclipse 안의 자바개발툴
-      sourceCompatibility = 17
-      targetCompatibility = 17
-      javaRuntimeName = "JavaSE-17"
+        sourceCompatibility = 17
+        targetCompatibility = 17
+        javaRuntimeName = "JavaSE-17"
     }
+}
+
+// Gradle로 애플리케이션을 실행했을 때
+// 키보드 입력을 표준 입력 스트림으로 연결하는 방법
+run {
+    standardInput = System.in;
 }
