--- a/myapp/app-api/build.gradle
+++ b/myapp/app-api/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'application'
+    id 'java-library'
 }
 
 repositories {
@@ -24,10 +24,6 @@ java {
     }
 }
 
-application {
-    mainClass = 'bitcamp.myapp.ServerApp'
-}
-
 tasks.named('test') {
     useJUnitPlatform()
 }
@@ -37,8 +33,4 @@ tasks.withType(JavaCompile).configureEach {
     // 프로젝트의 소스 파일 인코딩을 gradle에게 알려준다.
     // $javac -encoding UTF-8 ..
     options.encoding = 'UTF-8'
-}
-
-run {
-    standardInput = System.in
 }
