--- a/myapp/app-client/build.gradle
+++ b/myapp/app-client/build.gradle
@@ -7,9 +7,11 @@ repositories {
 }
 
 dependencies {
-    // 빌드할 때 해당 프로젝트를 포함하겠다는 의미
-    implementation project(':app-common') // VO 객체와 DAO 인터페이스
-    implementation project(':app-api') // DAO Stub 객체
+    // VO 객체와 DAO 인터페이스
+    implementation project(':app-common')
+
+    // DAO Stub 객체
+    implementation project(':app-api')
 
     // JSON 라이브러리
     implementation 'com.google.code.gson:gson:2.10.1'
