--- a/myapp/app-server/build.gradle
+++ b/myapp/app-server/build.gradle
@@ -7,10 +7,17 @@ repositories {
 }
 
 dependencies {
-    implementation project(':app-common')
-    
+//    // VO 객체와 DAO 인터페이스
+//    implementation project(':app-common')
+
+    // MySQL JDBC Driver
+    implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
+//
+//    // DAO Stub 객체
+//    implementation project(':app-api')
+
     // JSON 라이브러리
-    implementation 'com.google.code.gson:gson:2.10.1'
+//    implementation 'com.google.code.gson:gson:2.10.1'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
