--- a/servlet-app/app/build.gradle
+++ b/servlet-app/app/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     // multipart/form-data 파일 업로드 처리
     implementation 'commons-fileupload:commons-fileupload:1.5'
 
+    // JSTL 라이브러리
+    implementation 'javax.servlet:jstl:1.2'
+
     // Use JUnit Jupiter for testing.
     testImplementation libs.junit.jupiter
 
