--- a/t-app/app/build.gradle
+++ b/t-app/app/build.gradle
@@ -50,28 +50,32 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
+
+java {
+    dependencies {
 //    // VO 객체와 DAO 인터페이스
 //    implementation project(':app-common')
 
-    // MySQL JDBC Driver
-    implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
+        // MySQL JDBC Driver
+        implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
 //
 //    // DAO Stub 객체
 //    implementation project(':app-api')
 
-    // JSON 라이브러리
+        // JSON 라이브러리
 //    implementation 'com.google.code.gson:gson:2.10.1'
 
-    // 임베디드 Tomcat 서버
-    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.85'
+        // 임베디드 Tomcat 서버
+        implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.85'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    implementation 'com.google.guava:guava:32.1.1-jre'
-}
+        // JSTL 라이브러리
+        implementation 'javax.servlet:jstl:1.2'
 
-java {
+
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
+        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+        implementation 'com.google.guava:guava:32.1.1-jre'
+    }
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
