--- a/t-app/app/build.gradle
+++ b/t-app/app/build.gradle
@@ -71,6 +71,8 @@ java {
         // JSTL 라이브러리
         implementation 'javax.servlet:jstl:1.2'
 
+        implementation group: 'org.springframework', name: 'spring-context', version: '5.3.32'
+
 
         testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
