--- a/myapp/app/build.gradle
+++ b/myapp/app/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     // Spring IoC 컨테이너
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.32'
 
+    // Spring webmvc 라이브러리
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.32'
+
     // JSTL 라이브러리
     // https://mvnrepository.com/artifact/javax.servlet/jstl
     implementation 'javax.servlet:jstl:1.2'
