--- a/mvc-app/app/src/main/webapp/WEB-INF/web.xml
+++ b/mvc-app/app/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,7 @@
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>/WEB-INF/app-servlet.xml</param-value>
+    <param-value>/WEB-INF/config/application-context.xml</param-value>
   </context-param>
 
   <!-- 글로벌 Spring IoC 컨테이너 준비 -->
@@ -35,19 +35,24 @@
   <servlet>
     <servlet-name>app</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-    <init-param>
-      <param-name>contextConfigLocation</param-name>
-      <param-value></param-value>
-    </init-param>
-    <!-- 서블릿을 요청하지 않아도 웹 애플리케이션을 시작시킬 때 자동 생성되어
-         IoC 컨테이너를 준비할 수 있도록
-         다음 옵션을 붙인다. -->
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
     <servlet-name>app</servlet-name>
     <url-pattern>/app/*</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+    <servlet-name>admin</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>admin</servlet-name>
+    <url-pattern>/admin/*</url-pattern>
+  </servlet-mapping>
+
+
 
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
