--- a/mvc-app/app/build.gradle
+++ b/mvc-app/app/build.gradle
@@ -13,19 +13,17 @@ plugins {
 repositories {
     mavenCentral()
 }
-
 dependencies {
-//    // VO 객체와 DAO 인터페이스
-//    implementation project(':app-common')
-
     // MySQL JDBC Driver
     implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
-//
-//    // DAO Stub 객체
-//    implementation project(':app-api')
 
-    // JSON 라이브러리
-//    implementation 'com.google.code.gson:gson:2.10.1'
+    // JSON Jackson 라이브러리
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+
+    // JSON 구글 라이브러리
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+
 
     // 임베디드 Tomcat 서버
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.85'
@@ -50,6 +48,7 @@ dependencies {
     // log4j 2.x 라이브러리
     implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
 }
+
 
 java {
     toolchain {
