--- a/mvc-app/app/src/main/webapp/WEB-INF/web.xml
+++ b/mvc-app/app/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,14 @@
     <welcome-file>index.htm</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
-
+  <!--
+    <error-page>
+      <location>/WEB-INF/jsp2/error.jsp</location>
+    </error-page>
+  -->
+    <error-page>
+      <location>/app2/error2</location>
+    </error-page>
 </web-app>
 
 
