--- a/myapp/app/build.gradle
+++ b/myapp/app/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     // Spring webmvc 라이브러리
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.32'
 
+    // log4j 2.x 라이브러리
+    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+
     // JSTL 라이브러리
     // https://mvnrepository.com/artifact/javax.servlet/jstl
     implementation 'javax.servlet:jstl:1.2'
