--- a/myapp/app/build.gradle
+++ b/myapp/app/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     // log4j 2.x 라이브러리
     implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
 
+    // Mybatis 라이브러리
+    implementation 'org.mybatis:mybatis:3.5.15'
+
     // JSTL 라이브러리
     // https://mvnrepository.com/artifact/javax.servlet/jstl
     implementation 'javax.servlet:jstl:1.2'
