--- a/myapp/app/build.gradle
+++ b/myapp/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     // Mybatis 라이브러리
     implementation 'org.mybatis:mybatis:3.5.15'
 
+    // Mybatis를 Spring 프레임워크과 연동할 때 사용하는 라이브러리
+    implementation 'org.mybatis:mybatis-spring:3.0.3'
+
     // JSTL 라이브러리
     // https://mvnrepository.com/artifact/javax.servlet/jstl
     implementation 'javax.servlet:jstl:1.2'
