--- a/myapp/app/build.gradle
+++ b/myapp/app/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     // Spring webmvc 라이브러리
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.32'
 
+    // Spring JDBC 라이브러리
+    implementation 'org.springframework:spring-jdbc:5.3.32'
+
     // log4j 2.x 라이브러리
     implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
 
@@ -36,6 +39,7 @@ dependencies {
 
     // Mybatis를 Spring 프레임워크과 연동할 때 사용하는 라이브러리
     implementation 'org.mybatis:mybatis-spring:3.0.3'
+
 
     // JSTL 라이브러리
     // https://mvnrepository.com/artifact/javax.servlet/jstl
