Mybatis의 Spring 연동 플러그인을 사용하여 DAO를 자동 생성하는 방법

--- a/myapp/app/build.gradle
+++ b/myapp/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
 repositories {
     mavenCentral()
 }
-
 dependencies {
 //    // VO 객체와 DAO 인터페이스
 //    implementation project(':app-common')
@@ -37,8 +36,12 @@ dependencies {
     // Mybatis 라이브러리
     implementation 'org.mybatis:mybatis:3.5.15'
 
-    // Mybatis를 Spring 프레임워크과 연동할 때 사용하는 라이브러리
-    implementation 'org.mybatis:mybatis-spring:3.0.3'
+    // Mybatis를 Spring 프레임워크와 연동할 때 사용하는 라이브러리
+    // =>Mybatis 3.5를 5.x와 연동시켜주는 라이브러리
+    implementation 'org.mybatis:mybatis-spring:2.1.2'
+    // Mybatis를 Spring 프레임워크와 더 쉽게 연동하고자 할 때 사용하는 라이브러리
+    // =>Mybatis 3.5를 6.0.x와 연동시켜주는 라이브러리
+    //implementation 'org.mybatis:mybatis-spring:3.0.3'
 
 
     // JSTL 라이브러리
@@ -49,6 +52,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'com.google.guava:guava:32.1.1-jre'
 }
+
 
 java {
     toolchain {
